MRJP/LatteCompilerPython/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    FOR

Grammar

Rule 0     S' -> program
Rule 1     program -> listtopdef
Rule 2     listexpr -> <empty>
Rule 3     listexpr -> expr
Rule 4     listexpr -> listexpr COMMA expr
Rule 5     listtopdef -> topdef
Rule 6     listtopdef -> listtopdef topdef
Rule 7     liststmt -> stmt
Rule 8     liststmt -> liststmt stmt
Rule 9     listitem -> <empty>
Rule 10    listitem -> item
Rule 11    listitem -> listitem COMMA item
Rule 12    listarg -> <empty>
Rule 13    listarg -> arg
Rule 14    listarg -> listarg COMMA arg
Rule 15    item -> ID
Rule 16    item -> ID EQUALS expr
Rule 17    arg -> type ID
Rule 18    topdef -> type ID LPAREN listarg RPAREN block
Rule 19    block -> LBRACE RBRACE
Rule 20    block -> LBRACE liststmt RBRACE
Rule 21    stmt -> SEMI
Rule 22    stmt -> block
Rule 23    stmt -> type listitem SEMI
Rule 24    stmt -> ID EQUALS expr SEMI
Rule 25    stmt -> ID PLUSPLUS SEMI
Rule 26    stmt -> ID MINUSMINUS SEMI
Rule 27    stmt -> RETURN expr SEMI
Rule 28    stmt -> RETURN SEMI
Rule 29    stmt -> IF LPAREN expr RPAREN stmt
Rule 30    stmt -> IF LPAREN expr RPAREN stmt ELSE stmt
Rule 31    stmt -> WHILE LPAREN expr RPAREN stmt
Rule 32    stmt -> expr SEMI
Rule 33    expr6 -> ID
Rule 34    expr6 -> NUMBER
Rule 35    expr6 -> TRUE
Rule 36    expr6 -> FALSE
Rule 37    expr6 -> ID LPAREN listexpr RPAREN
Rule 38    expr6 -> LPAREN expr RPAREN
Rule 39    expr6 -> SENTENCE
Rule 40    expr5 -> MINUS expr6
Rule 41    expr5 -> expr6
Rule 42    expr5 -> NOT expr6
Rule 43    expr4 -> expr5
Rule 44    mulop -> TIMES
Rule 45    mulop -> DIVIDE
Rule 46    mulop -> MOD
Rule 47    expr4 -> expr4 mulop expr5
Rule 48    addop -> PLUS
Rule 49    addop -> MINUS
Rule 50    expr3 -> expr3 addop expr4
Rule 51    expr3 -> expr4
Rule 52    relop -> LT
Rule 53    relop -> LE
Rule 54    relop -> GT
Rule 55    relop -> GE
Rule 56    relop -> EQ
Rule 57    relop -> NE
Rule 58    expr2 -> expr2 relop expr3
Rule 59    expr2 -> expr3
Rule 60    expr1 -> expr2 AND expr1
Rule 61    expr1 -> expr2
Rule 62    expr -> expr1 OR expr
Rule 63    expr -> expr1
Rule 64    type -> INT
Rule 65    type -> STRING
Rule 66    type -> VOID
Rule 67    type -> BOOLEAN

Terminals, with rules where they appear

AND                  : 60
BOOLEAN              : 67
COMMA                : 4 11 14
DIVIDE               : 45
ELSE                 : 30
EQ                   : 56
EQUALS               : 16 24
FALSE                : 36
FOR                  : 
GE                   : 55
GT                   : 54
ID                   : 15 16 17 18 24 25 26 33 37
IF                   : 29 30
INT                  : 64
LBRACE               : 19 20
LE                   : 53
LPAREN               : 18 29 30 31 37 38
LT                   : 52
MINUS                : 40 49
MINUSMINUS           : 26
MOD                  : 46
NE                   : 57
NOT                  : 42
NUMBER               : 34
OR                   : 62
PLUS                 : 48
PLUSPLUS             : 25
RBRACE               : 19 20
RETURN               : 27 28
RPAREN               : 18 29 30 31 37 38
SEMI                 : 21 23 24 25 26 27 28 32
SENTENCE             : 39
STRING               : 65
TIMES                : 44
TRUE                 : 35
VOID                 : 66
WHILE                : 31
error                : 

Nonterminals, with rules where they appear

addop                : 50
arg                  : 13 14
block                : 18 22
expr                 : 3 4 16 24 27 29 30 31 32 38 62
expr1                : 60 62 63
expr2                : 58 60 61
expr3                : 50 58 59
expr4                : 47 50 51
expr5                : 43 47
expr6                : 40 41 42
item                 : 10 11
listarg              : 14 18
listexpr             : 4 37
listitem             : 11 23
liststmt             : 8 20
listtopdef           : 1 6
mulop                : 47
program              : 0
relop                : 58
stmt                 : 7 8 29 30 30 31
topdef               : 5 6
type                 : 17 18 23

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . listtopdef
    (5) listtopdef -> . topdef
    (6) listtopdef -> . listtopdef topdef
    (18) topdef -> . type ID LPAREN listarg RPAREN block
    (64) type -> . INT
    (65) type -> . STRING
    (66) type -> . VOID
    (67) type -> . BOOLEAN

    INT             shift and go to state 5
    STRING          shift and go to state 1
    VOID            shift and go to state 3
    BOOLEAN         shift and go to state 7

    topdef                         shift and go to state 2
    listtopdef                     shift and go to state 4
    program                        shift and go to state 6
    type                           shift and go to state 8

state 1

    (65) type -> STRING .

    ID              reduce using rule 65 (type -> STRING .)
    SEMI            reduce using rule 65 (type -> STRING .)
    COMMA           reduce using rule 65 (type -> STRING .)


state 2

    (5) listtopdef -> topdef .

    INT             reduce using rule 5 (listtopdef -> topdef .)
    STRING          reduce using rule 5 (listtopdef -> topdef .)
    VOID            reduce using rule 5 (listtopdef -> topdef .)
    BOOLEAN         reduce using rule 5 (listtopdef -> topdef .)
    $end            reduce using rule 5 (listtopdef -> topdef .)


state 3

    (66) type -> VOID .

    ID              reduce using rule 66 (type -> VOID .)
    SEMI            reduce using rule 66 (type -> VOID .)
    COMMA           reduce using rule 66 (type -> VOID .)


state 4

    (1) program -> listtopdef .
    (6) listtopdef -> listtopdef . topdef
    (18) topdef -> . type ID LPAREN listarg RPAREN block
    (64) type -> . INT
    (65) type -> . STRING
    (66) type -> . VOID
    (67) type -> . BOOLEAN

    $end            reduce using rule 1 (program -> listtopdef .)
    INT             shift and go to state 5
    STRING          shift and go to state 1
    VOID            shift and go to state 3
    BOOLEAN         shift and go to state 7

    topdef                         shift and go to state 9
    type                           shift and go to state 8

state 5

    (64) type -> INT .

    ID              reduce using rule 64 (type -> INT .)
    SEMI            reduce using rule 64 (type -> INT .)
    COMMA           reduce using rule 64 (type -> INT .)


state 6

    (0) S' -> program .



state 7

    (67) type -> BOOLEAN .

    ID              reduce using rule 67 (type -> BOOLEAN .)
    SEMI            reduce using rule 67 (type -> BOOLEAN .)
    COMMA           reduce using rule 67 (type -> BOOLEAN .)


state 8

    (18) topdef -> type . ID LPAREN listarg RPAREN block

    ID              shift and go to state 10


state 9

    (6) listtopdef -> listtopdef topdef .

    INT             reduce using rule 6 (listtopdef -> listtopdef topdef .)
    STRING          reduce using rule 6 (listtopdef -> listtopdef topdef .)
    VOID            reduce using rule 6 (listtopdef -> listtopdef topdef .)
    BOOLEAN         reduce using rule 6 (listtopdef -> listtopdef topdef .)
    $end            reduce using rule 6 (listtopdef -> listtopdef topdef .)


state 10

    (18) topdef -> type ID . LPAREN listarg RPAREN block

    LPAREN          shift and go to state 11


state 11

    (18) topdef -> type ID LPAREN . listarg RPAREN block
    (12) listarg -> .
    (13) listarg -> . arg
    (14) listarg -> . listarg COMMA arg
    (17) arg -> . type ID
    (64) type -> . INT
    (65) type -> . STRING
    (66) type -> . VOID
    (67) type -> . BOOLEAN

    RPAREN          reduce using rule 12 (listarg -> .)
    COMMA           reduce using rule 12 (listarg -> .)
    INT             shift and go to state 5
    STRING          shift and go to state 1
    VOID            shift and go to state 3
    BOOLEAN         shift and go to state 7

    listarg                        shift and go to state 12
    type                           shift and go to state 14
    arg                            shift and go to state 13

state 12

    (18) topdef -> type ID LPAREN listarg . RPAREN block
    (14) listarg -> listarg . COMMA arg

    RPAREN          shift and go to state 15
    COMMA           shift and go to state 16


state 13

    (13) listarg -> arg .

    RPAREN          reduce using rule 13 (listarg -> arg .)
    COMMA           reduce using rule 13 (listarg -> arg .)


state 14

    (17) arg -> type . ID

    ID              shift and go to state 17


state 15

    (18) topdef -> type ID LPAREN listarg RPAREN . block
    (19) block -> . LBRACE RBRACE
    (20) block -> . LBRACE liststmt RBRACE

    LBRACE          shift and go to state 18

    block                          shift and go to state 19

state 16

    (14) listarg -> listarg COMMA . arg
    (17) arg -> . type ID
    (64) type -> . INT
    (65) type -> . STRING
    (66) type -> . VOID
    (67) type -> . BOOLEAN

    INT             shift and go to state 5
    STRING          shift and go to state 1
    VOID            shift and go to state 3
    BOOLEAN         shift and go to state 7

    type                           shift and go to state 14
    arg                            shift and go to state 20

state 17

    (17) arg -> type ID .

    RPAREN          reduce using rule 17 (arg -> type ID .)
    COMMA           reduce using rule 17 (arg -> type ID .)


state 18

    (19) block -> LBRACE . RBRACE
    (20) block -> LBRACE . liststmt RBRACE
    (7) liststmt -> . stmt
    (8) liststmt -> . liststmt stmt
    (21) stmt -> . SEMI
    (22) stmt -> . block
    (23) stmt -> . type listitem SEMI
    (24) stmt -> . ID EQUALS expr SEMI
    (25) stmt -> . ID PLUSPLUS SEMI
    (26) stmt -> . ID MINUSMINUS SEMI
    (27) stmt -> . RETURN expr SEMI
    (28) stmt -> . RETURN SEMI
    (29) stmt -> . IF LPAREN expr RPAREN stmt
    (30) stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (31) stmt -> . WHILE LPAREN expr RPAREN stmt
    (32) stmt -> . expr SEMI
    (19) block -> . LBRACE RBRACE
    (20) block -> . LBRACE liststmt RBRACE
    (64) type -> . INT
    (65) type -> . STRING
    (66) type -> . VOID
    (67) type -> . BOOLEAN
    (62) expr -> . expr1 OR expr
    (63) expr -> . expr1
    (60) expr1 -> . expr2 AND expr1
    (61) expr1 -> . expr2
    (58) expr2 -> . expr2 relop expr3
    (59) expr2 -> . expr3
    (50) expr3 -> . expr3 addop expr4
    (51) expr3 -> . expr4
    (43) expr4 -> . expr5
    (47) expr4 -> . expr4 mulop expr5
    (40) expr5 -> . MINUS expr6
    (41) expr5 -> . expr6
    (42) expr5 -> . NOT expr6
    (33) expr6 -> . ID
    (34) expr6 -> . NUMBER
    (35) expr6 -> . TRUE
    (36) expr6 -> . FALSE
    (37) expr6 -> . ID LPAREN listexpr RPAREN
    (38) expr6 -> . LPAREN expr RPAREN
    (39) expr6 -> . SENTENCE

    RBRACE          shift and go to state 35
    SEMI            shift and go to state 27
    ID              shift and go to state 39
    RETURN          shift and go to state 21
    IF              shift and go to state 40
    WHILE           shift and go to state 24
    LBRACE          shift and go to state 18
    INT             shift and go to state 5
    STRING          shift and go to state 1
    VOID            shift and go to state 3
    BOOLEAN         shift and go to state 7
    MINUS           shift and go to state 26
    NOT             shift and go to state 43
    NUMBER          shift and go to state 23
    TRUE            shift and go to state 25
    FALSE           shift and go to state 41
    LPAREN          shift and go to state 38
    SENTENCE        shift and go to state 36

    expr                           shift and go to state 42
    liststmt                       shift and go to state 22
    stmt                           shift and go to state 37
    expr2                          shift and go to state 28
    expr3                          shift and go to state 29
    expr1                          shift and go to state 30
    expr6                          shift and go to state 31
    expr4                          shift and go to state 32
    expr5                          shift and go to state 33
    type                           shift and go to state 34
    block                          shift and go to state 44

state 19

    (18) topdef -> type ID LPAREN listarg RPAREN block .

    INT             reduce using rule 18 (topdef -> type ID LPAREN listarg RPAREN block .)
    STRING          reduce using rule 18 (topdef -> type ID LPAREN listarg RPAREN block .)
    VOID            reduce using rule 18 (topdef -> type ID LPAREN listarg RPAREN block .)
    BOOLEAN         reduce using rule 18 (topdef -> type ID LPAREN listarg RPAREN block .)
    $end            reduce using rule 18 (topdef -> type ID LPAREN listarg RPAREN block .)


state 20

    (14) listarg -> listarg COMMA arg .

    RPAREN          reduce using rule 14 (listarg -> listarg COMMA arg .)
    COMMA           reduce using rule 14 (listarg -> listarg COMMA arg .)


state 21

    (27) stmt -> RETURN . expr SEMI
    (28) stmt -> RETURN . SEMI
    (62) expr -> . expr1 OR expr
    (63) expr -> . expr1
    (60) expr1 -> . expr2 AND expr1
    (61) expr1 -> . expr2
    (58) expr2 -> . expr2 relop expr3
    (59) expr2 -> . expr3
    (50) expr3 -> . expr3 addop expr4
    (51) expr3 -> . expr4
    (43) expr4 -> . expr5
    (47) expr4 -> . expr4 mulop expr5
    (40) expr5 -> . MINUS expr6
    (41) expr5 -> . expr6
    (42) expr5 -> . NOT expr6
    (33) expr6 -> . ID
    (34) expr6 -> . NUMBER
    (35) expr6 -> . TRUE
    (36) expr6 -> . FALSE
    (37) expr6 -> . ID LPAREN listexpr RPAREN
    (38) expr6 -> . LPAREN expr RPAREN
    (39) expr6 -> . SENTENCE

    SEMI            shift and go to state 45
    MINUS           shift and go to state 26
    NOT             shift and go to state 43
    ID              shift and go to state 46
    NUMBER          shift and go to state 23
    TRUE            shift and go to state 25
    FALSE           shift and go to state 41
    LPAREN          shift and go to state 38
    SENTENCE        shift and go to state 36

    expr                           shift and go to state 47
    expr2                          shift and go to state 28
    expr3                          shift and go to state 29
    expr1                          shift and go to state 30
    expr6                          shift and go to state 31
    expr4                          shift and go to state 32
    expr5                          shift and go to state 33

state 22

    (20) block -> LBRACE liststmt . RBRACE
    (8) liststmt -> liststmt . stmt
    (21) stmt -> . SEMI
    (22) stmt -> . block
    (23) stmt -> . type listitem SEMI
    (24) stmt -> . ID EQUALS expr SEMI
    (25) stmt -> . ID PLUSPLUS SEMI
    (26) stmt -> . ID MINUSMINUS SEMI
    (27) stmt -> . RETURN expr SEMI
    (28) stmt -> . RETURN SEMI
    (29) stmt -> . IF LPAREN expr RPAREN stmt
    (30) stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (31) stmt -> . WHILE LPAREN expr RPAREN stmt
    (32) stmt -> . expr SEMI
    (19) block -> . LBRACE RBRACE
    (20) block -> . LBRACE liststmt RBRACE
    (64) type -> . INT
    (65) type -> . STRING
    (66) type -> . VOID
    (67) type -> . BOOLEAN
    (62) expr -> . expr1 OR expr
    (63) expr -> . expr1
    (60) expr1 -> . expr2 AND expr1
    (61) expr1 -> . expr2
    (58) expr2 -> . expr2 relop expr3
    (59) expr2 -> . expr3
    (50) expr3 -> . expr3 addop expr4
    (51) expr3 -> . expr4
    (43) expr4 -> . expr5
    (47) expr4 -> . expr4 mulop expr5
    (40) expr5 -> . MINUS expr6
    (41) expr5 -> . expr6
    (42) expr5 -> . NOT expr6
    (33) expr6 -> . ID
    (34) expr6 -> . NUMBER
    (35) expr6 -> . TRUE
    (36) expr6 -> . FALSE
    (37) expr6 -> . ID LPAREN listexpr RPAREN
    (38) expr6 -> . LPAREN expr RPAREN
    (39) expr6 -> . SENTENCE

    RBRACE          shift and go to state 48
    SEMI            shift and go to state 27
    ID              shift and go to state 39
    RETURN          shift and go to state 21
    IF              shift and go to state 40
    WHILE           shift and go to state 24
    LBRACE          shift and go to state 18
    INT             shift and go to state 5
    STRING          shift and go to state 1
    VOID            shift and go to state 3
    BOOLEAN         shift and go to state 7
    MINUS           shift and go to state 26
    NOT             shift and go to state 43
    NUMBER          shift and go to state 23
    TRUE            shift and go to state 25
    FALSE           shift and go to state 41
    LPAREN          shift and go to state 38
    SENTENCE        shift and go to state 36

    expr                           shift and go to state 42
    stmt                           shift and go to state 49
    expr2                          shift and go to state 28
    expr3                          shift and go to state 29
    expr1                          shift and go to state 30
    expr6                          shift and go to state 31
    expr4                          shift and go to state 32
    expr5                          shift and go to state 33
    type                           shift and go to state 34
    block                          shift and go to state 44

state 23

    (34) expr6 -> NUMBER .

    TIMES           reduce using rule 34 (expr6 -> NUMBER .)
    DIVIDE          reduce using rule 34 (expr6 -> NUMBER .)
    MOD             reduce using rule 34 (expr6 -> NUMBER .)
    PLUS            reduce using rule 34 (expr6 -> NUMBER .)
    MINUS           reduce using rule 34 (expr6 -> NUMBER .)
    AND             reduce using rule 34 (expr6 -> NUMBER .)
    LT              reduce using rule 34 (expr6 -> NUMBER .)
    LE              reduce using rule 34 (expr6 -> NUMBER .)
    GT              reduce using rule 34 (expr6 -> NUMBER .)
    GE              reduce using rule 34 (expr6 -> NUMBER .)
    EQ              reduce using rule 34 (expr6 -> NUMBER .)
    NE              reduce using rule 34 (expr6 -> NUMBER .)
    OR              reduce using rule 34 (expr6 -> NUMBER .)
    SEMI            reduce using rule 34 (expr6 -> NUMBER .)
    RPAREN          reduce using rule 34 (expr6 -> NUMBER .)
    COMMA           reduce using rule 34 (expr6 -> NUMBER .)


state 24

    (31) stmt -> WHILE . LPAREN expr RPAREN stmt

    LPAREN          shift and go to state 50


state 25

    (35) expr6 -> TRUE .

    TIMES           reduce using rule 35 (expr6 -> TRUE .)
    DIVIDE          reduce using rule 35 (expr6 -> TRUE .)
    MOD             reduce using rule 35 (expr6 -> TRUE .)
    PLUS            reduce using rule 35 (expr6 -> TRUE .)
    MINUS           reduce using rule 35 (expr6 -> TRUE .)
    AND             reduce using rule 35 (expr6 -> TRUE .)
    LT              reduce using rule 35 (expr6 -> TRUE .)
    LE              reduce using rule 35 (expr6 -> TRUE .)
    GT              reduce using rule 35 (expr6 -> TRUE .)
    GE              reduce using rule 35 (expr6 -> TRUE .)
    EQ              reduce using rule 35 (expr6 -> TRUE .)
    NE              reduce using rule 35 (expr6 -> TRUE .)
    OR              reduce using rule 35 (expr6 -> TRUE .)
    SEMI            reduce using rule 35 (expr6 -> TRUE .)
    RPAREN          reduce using rule 35 (expr6 -> TRUE .)
    COMMA           reduce using rule 35 (expr6 -> TRUE .)


state 26

    (40) expr5 -> MINUS . expr6
    (33) expr6 -> . ID
    (34) expr6 -> . NUMBER
    (35) expr6 -> . TRUE
    (36) expr6 -> . FALSE
    (37) expr6 -> . ID LPAREN listexpr RPAREN
    (38) expr6 -> . LPAREN expr RPAREN
    (39) expr6 -> . SENTENCE

    ID              shift and go to state 46
    NUMBER          shift and go to state 23
    TRUE            shift and go to state 25
    FALSE           shift and go to state 41
    LPAREN          shift and go to state 38
    SENTENCE        shift and go to state 36

    expr6                          shift and go to state 51

state 27

    (21) stmt -> SEMI .

    RBRACE          reduce using rule 21 (stmt -> SEMI .)
    SEMI            reduce using rule 21 (stmt -> SEMI .)
    ID              reduce using rule 21 (stmt -> SEMI .)
    RETURN          reduce using rule 21 (stmt -> SEMI .)
    IF              reduce using rule 21 (stmt -> SEMI .)
    WHILE           reduce using rule 21 (stmt -> SEMI .)
    LBRACE          reduce using rule 21 (stmt -> SEMI .)
    INT             reduce using rule 21 (stmt -> SEMI .)
    STRING          reduce using rule 21 (stmt -> SEMI .)
    VOID            reduce using rule 21 (stmt -> SEMI .)
    BOOLEAN         reduce using rule 21 (stmt -> SEMI .)
    MINUS           reduce using rule 21 (stmt -> SEMI .)
    NOT             reduce using rule 21 (stmt -> SEMI .)
    NUMBER          reduce using rule 21 (stmt -> SEMI .)
    TRUE            reduce using rule 21 (stmt -> SEMI .)
    FALSE           reduce using rule 21 (stmt -> SEMI .)
    LPAREN          reduce using rule 21 (stmt -> SEMI .)
    SENTENCE        reduce using rule 21 (stmt -> SEMI .)
    ELSE            reduce using rule 21 (stmt -> SEMI .)


state 28

    (60) expr1 -> expr2 . AND expr1
    (61) expr1 -> expr2 .
    (58) expr2 -> expr2 . relop expr3
    (52) relop -> . LT
    (53) relop -> . LE
    (54) relop -> . GT
    (55) relop -> . GE
    (56) relop -> . EQ
    (57) relop -> . NE

    AND             shift and go to state 52
    OR              reduce using rule 61 (expr1 -> expr2 .)
    RPAREN          reduce using rule 61 (expr1 -> expr2 .)
    COMMA           reduce using rule 61 (expr1 -> expr2 .)
    SEMI            reduce using rule 61 (expr1 -> expr2 .)
    LT              shift and go to state 58
    LE              shift and go to state 54
    GT              shift and go to state 53
    GE              shift and go to state 56
    EQ              shift and go to state 59
    NE              shift and go to state 57

    relop                          shift and go to state 55

state 29

    (59) expr2 -> expr3 .
    (50) expr3 -> expr3 . addop expr4
    (48) addop -> . PLUS
    (49) addop -> . MINUS

    AND             reduce using rule 59 (expr2 -> expr3 .)
    LT              reduce using rule 59 (expr2 -> expr3 .)
    LE              reduce using rule 59 (expr2 -> expr3 .)
    GT              reduce using rule 59 (expr2 -> expr3 .)
    GE              reduce using rule 59 (expr2 -> expr3 .)
    EQ              reduce using rule 59 (expr2 -> expr3 .)
    NE              reduce using rule 59 (expr2 -> expr3 .)
    OR              reduce using rule 59 (expr2 -> expr3 .)
    SEMI            reduce using rule 59 (expr2 -> expr3 .)
    RPAREN          reduce using rule 59 (expr2 -> expr3 .)
    COMMA           reduce using rule 59 (expr2 -> expr3 .)
    PLUS            shift and go to state 60
    MINUS           shift and go to state 61

    addop                          shift and go to state 62

state 30

    (62) expr -> expr1 . OR expr
    (63) expr -> expr1 .

    OR              shift and go to state 63
    SEMI            reduce using rule 63 (expr -> expr1 .)
    RPAREN          reduce using rule 63 (expr -> expr1 .)
    COMMA           reduce using rule 63 (expr -> expr1 .)


state 31

    (41) expr5 -> expr6 .

    TIMES           reduce using rule 41 (expr5 -> expr6 .)
    DIVIDE          reduce using rule 41 (expr5 -> expr6 .)
    MOD             reduce using rule 41 (expr5 -> expr6 .)
    PLUS            reduce using rule 41 (expr5 -> expr6 .)
    MINUS           reduce using rule 41 (expr5 -> expr6 .)
    AND             reduce using rule 41 (expr5 -> expr6 .)
    LT              reduce using rule 41 (expr5 -> expr6 .)
    LE              reduce using rule 41 (expr5 -> expr6 .)
    GT              reduce using rule 41 (expr5 -> expr6 .)
    GE              reduce using rule 41 (expr5 -> expr6 .)
    EQ              reduce using rule 41 (expr5 -> expr6 .)
    NE              reduce using rule 41 (expr5 -> expr6 .)
    OR              reduce using rule 41 (expr5 -> expr6 .)
    SEMI            reduce using rule 41 (expr5 -> expr6 .)
    RPAREN          reduce using rule 41 (expr5 -> expr6 .)
    COMMA           reduce using rule 41 (expr5 -> expr6 .)


state 32

    (51) expr3 -> expr4 .
    (47) expr4 -> expr4 . mulop expr5
    (44) mulop -> . TIMES
    (45) mulop -> . DIVIDE
    (46) mulop -> . MOD

    PLUS            reduce using rule 51 (expr3 -> expr4 .)
    MINUS           reduce using rule 51 (expr3 -> expr4 .)
    AND             reduce using rule 51 (expr3 -> expr4 .)
    LT              reduce using rule 51 (expr3 -> expr4 .)
    LE              reduce using rule 51 (expr3 -> expr4 .)
    GT              reduce using rule 51 (expr3 -> expr4 .)
    GE              reduce using rule 51 (expr3 -> expr4 .)
    EQ              reduce using rule 51 (expr3 -> expr4 .)
    NE              reduce using rule 51 (expr3 -> expr4 .)
    OR              reduce using rule 51 (expr3 -> expr4 .)
    SEMI            reduce using rule 51 (expr3 -> expr4 .)
    RPAREN          reduce using rule 51 (expr3 -> expr4 .)
    COMMA           reduce using rule 51 (expr3 -> expr4 .)
    TIMES           shift and go to state 65
    DIVIDE          shift and go to state 64
    MOD             shift and go to state 67

    mulop                          shift and go to state 66

state 33

    (43) expr4 -> expr5 .
